# kaggle-santa-2023

./: .gitignore  README.md  pyproject.toml
src/: playground.py  search.py  train.py  train.sh
src/configs/: cube_3.yml  cube_4.yml  cube_5.yml  cube_6.yml  cube_7.yml
src/models/: resnet.py
src/tests/: test_move.py  test_puzzle.py  test_puzzle_pytorch.py  test_state.py
src/utils/: __init__.py  data.py  dataset.py  load_model.py  model_dir.py  move.py  puzzle.py  puzzle_pytorch.py  state.py  submission.py  typing.py
